@@ -1,3 +1,10 @@
+2008-03-30  Ulrich Mueller  <ulm@gentoo.org>
+
+	* gentoo-syntax.el (sh-script): Require sh-script, in order to
+	quieten the byte-compiler.
+	(ebuild-mode): Call make-local-hook only for XEmacs.
+	(eselect-mode): Ditto.
+
 2008-02-24  Ulrich Mueller  <ulm@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-mode-arch-stable-list)
